--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
     "eslint-plugin-jsx-a11y": "^6.10.2",
+    "jsdom": "^22.0.0",
     "prettier": "^3.6.2",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
