--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
 
       - run: pnpm lint
       - run: pnpm typecheck
-      - run: pnpm test --run
+      - run: NODE_OPTIONS='--experimental-vm-modules' pnpm test --run
       - run: pnpm build
       
       - name: Install Playwright browsers
