fix: simplify vitest config and CI for better compatibility
- Remove NODE_OPTIONS experimental flag (not needed locally)
- Use frozen-lockfile for consistent dependency versions
- Simplify vitest config imports for better CI compatibility
- All steps tested locally: lint ✅, typecheck ✅, test ✅, build ✅

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,11 +20,11 @@ jobs:
           cache: 'pnpm'
 
       - run: corepack enable
-      - run: pnpm install --no-frozen-lockfile
+      - run: pnpm install --frozen-lockfile
 
       - run: pnpm lint
       - run: pnpm typecheck
-      - run: NODE_OPTIONS='--experimental-vm-modules' pnpm test --run
+      - run: pnpm test --run
       - run: pnpm build
       
       - name: Install Playwright browsers
