--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -102,6 +102,9 @@ jobs:
       - name: Build application
         run: pnpm build
 
+      - name: List build directory
+        run: ls -la .next/
+
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
