--- a/package.json
+++ b/package.json
@@ -57,10 +57,12 @@
     "eslint-config-next": "15.5.4",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "jsdom": "^22.0.0",
+    "lighthouse": "^13.0.0",
     "prettier": "^3.6.2",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5",
-    "vitest": "^3.2.4"
+    "vitest": "^3.2.4",
+    "wait-on": "^9.0.1"
   }
 }
