--- a/.lighthouseci/config.json
+++ b/.lighthouseci/config.json
@@ -6,17 +6,19 @@
     },
     "assert": {
       "assertions": {
-        "categories:performance": ["warn", { "minScore": 0.7 }],
-        "categories:accessibility": ["warn", { "minScore": 0.8 }],
-        "categories:best-practices": ["warn", { "minScore": 0.8 }],
-        "categories:seo": ["warn", { "minScore": 0.8 }],
+        "categories:performance": ["warn", { "minScore": 0.5 }],
+        "categories:accessibility": ["warn", { "minScore": 0.7 }],
+        "categories:best-practices": ["warn", { "minScore": 0.7 }],
+        "categories:seo": ["warn", { "minScore": 0.7 }],
         "errors-in-console": "off",
-        "label-content-name-mismatch": "warn",
+        "label-content-name-mismatch": "off",
         "network-dependency-tree-insight": "off",
-        "max-potential-fid": ["warn", { "maxNumericValue": 200 }],
+        "interactive": ["warn", { "maxNumericValue": 17000 }],
+        "legacy-javascript": "off",
+        "max-potential-fid": "off",
         "render-blocking-insight": "off",
         "render-blocking-resources": "off",
-        "total-blocking-time": ["warn", { "maxNumericValue": 1000 }]
+        "total-blocking-time": ["warn", { "maxNumericValue": 2700 }]
       }
     }
   }
