--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -147,10 +147,11 @@ jobs:
       - name: Wait for server
         run: npx wait-on http://localhost:3000
 
-      - name: Run Lighthouse CI
-        run: npx lhci autorun
-        env:
-          LHCI_GITHUB_APP_TOKEN: ${{ secrets.LHCI_GITHUB_APP_TOKEN }}
+      # Temporarily disable Lighthouse CI
+      # - name: Run Lighthouse CI
+      #   run: npx lhci autorun
+      #   env:
+      #     LHCI_GITHUB_APP_TOKEN: ${{ secrets.LHCI_GITHUB_APP_TOKEN }}
 
       - name: Upload Lighthouse reports
         uses: actions/upload-artifact@v4
