--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "build:analyze": "ANALYZE=true next build",
     "start": "next start",
     "lint": "eslint",
+    "lint:fix": "eslint --fix",
     "typecheck": "tsc --noEmit",
     "test": "vitest --pool=forks",
     "test:e2e": "playwright test",
     "test:parity": "tsx scripts/git-parity.ts",
     "test:goldens": "RECORD_GOLDENS=true playwright test e2e/lgb-goldens.spec.ts",
-    "lighthouse": "lhci autorun"
+    "lighthouse": "lhci autorun",
+    "validate": "pnpm typecheck && pnpm lint && pnpm test --run && pnpm build",
+    "clean": "rm -rf .next node_modules/.cache",
+    "reset": "rm -rf node_modules pnpm-lock.yaml .next && pnpm install"
   },
   "dependencies": {
     "@isomorphic-git/lightning-fs": "^4.6.2",
