fix: resolve TypeScript errors and improve development setup
- Fix async client component issue in fixture page by using React.use()
- Update VS Code configurations for better development experience
- Fix Next.js and package.json configurations
- Ensure project builds and runs successfully

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,9 @@
       "name": "Attach to Node.js",
       "port": 9229,
       "request": "attach",
-      "skipFiles": ["<node_internals>/**"],
+      "skipFiles": [
+        "<node_internals>/**"
+      ],
       "type": "node"
     }
   ]
