Fix CI/CD workflows and add data attributes for E2E tests
- Add server startup and wait steps to ci.yml E2E tests
- Add server startup to quality.yml accessibility tests
- Add data-node-id attributes to GraphNode circles
- Add data-edge-id attributes to GraphEdge lines
- Ensure SVG markers are available in defs for test detection

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,5 +44,12 @@ jobs:
       
       - name: Install Playwright browsers
         run: pnpm exec playwright install --with-deps chromium
+      
+      - name: Start web server
+        run: pnpm start &
+      
+      - name: Wait for server
+        run: npx wait-on http://localhost:3000
+      
       - name: E2E tests
         run: pnpm exec playwright test --project=chromium
