Improve workflow robustness: ensure directories exist before artifact upload
- Add mkdir commands for lighthouse and goldens directories
- Prevents potential artifact upload failures in CI
- Ensures consistent directory structure across all environments

--- a/.github/workflows/lgb-parity.yml
+++ b/.github/workflows/lgb-parity.yml
@@ -86,6 +86,9 @@ jobs:
         run: pnpm exec playwright test e2e/lgb-goldens.spec.ts --project=chromium
         continue-on-error: true
 
+      - name: Ensure goldens directory exists
+        run: mkdir -p fixtures/lgb/goldens/
+      
       - name: Upload SVG goldens
         uses: actions/upload-artifact@v4
         if: always()
