--- a/package.json
+++ b/package.json
@@ -5,20 +5,12 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "dev:https": "next dev --turbopack --experimental-https",
-    "build": "next build",
-    "build:analyze": "ANALYZE=true next build",
+    "build": "next build --turbopack",
     "start": "next start",
     "lint": "eslint",
-    "lint:fix": "eslint --fix",
     "typecheck": "tsc --noEmit",
     "test": "vitest --pool=forks",
-    "test:e2e": "playwright test",
-    "test:parity": "tsx scripts/git-parity.ts",
-    "test:goldens": "RECORD_GOLDENS=true playwright test e2e/lgb-goldens.spec.ts",
-    "lighthouse": "lhci autorun",
-    "validate": "pnpm typecheck && pnpm lint && pnpm test --run && pnpm build",
-    "clean": "rm -rf .next node_modules/.cache",
-    "reset": "rm -rf node_modules pnpm-lock.yaml .next && pnpm install"
+    "test:e2e": "playwright test"
   },
   "dependencies": {
     "@isomorphic-git/lightning-fs": "^4.6.2",
@@ -56,7 +48,7 @@
     "@axe-core/playwright": "^4.10.2",
     "@eslint/eslintrc": "^3",
     "@lhci/cli": "^0.15.1",
-    "@next/bundle-analyzer": "^15.5.5",
+    "@next/bundle-analyzer": "^15.5.6",
     "@playwright/test": "^1.56.0",
     "@tailwindcss/postcss": "^4",
     "@testing-library/jest-dom": "^6.9.1",
