test: add basic parity test suite
- Added a basic parity test to ensure the workflow passes.
- Updated the test:parity script to disable watch mode.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint",
     "typecheck": "tsc --noEmit",
     "test": "vitest --pool=forks",
-    "test:e2e": "playwright test"
+    "test:e2e": "playwright test",
+    "test:parity": "vitest parity --run --reporter=json > parity-report.json"
   },
   "dependencies": {
     "@isomorphic-git/lightning-fs": "^4.6.2",
