fix: resolve GitHub Actions workflow failures
- Add missing build:analyze script with cross-env dependency
- Fix LGB parity test command by removing invalid arguments
- Bundle analyzer now properly configured for CI workflow
- Parity tests should now complete without module loading errors

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev --turbopack",
     "dev:https": "next dev --turbopack --experimental-https",
     "build": "next build --turbopack",
+    "build:analyze": "cross-env ANALYZE=true next build --turbopack",
     "start": "next start",
     "lint": "eslint",
     "typecheck": "tsc --noEmit",
@@ -60,6 +61,7 @@
     "@types/react-dom": "^19",
     "@vitejs/plugin-react": "^5.0.4",
     "axe-core": "^4.11.0",
+    "cross-env": "^10.1.0",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
     "eslint-plugin-jsx-a11y": "^6.10.2",
