--- a/.github/workflows/lgb-parity.yml
+++ b/.github/workflows/lgb-parity.yml
@@ -35,7 +35,7 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - name: Run Git parity tests
-        run: pnpm test:parity . --json > parity-report.json
+        run: pnpm test:parity
 
       - name: Upload parity report
         uses: actions/upload-artifact@v4
