Add Copilot-optimized GitHub CLI scripts following ChatGPT recommendations
🤖 COPILOT-READY IMPLEMENTATION:

• Created create-copilot-issues.sh - Production script using ChatGPT's exact approach
  - Uses -F flag to read body from markdown files
  - Uses -a @copilot flag for direct Copilot assignment
  - Implements ChatGPT's recommended label strategy
  - Handles assignment failures with graceful fallbacks
  - Validates Copilot availability and prerequisites

• Created bulk-create-issues.sh - ChatGPT's simple helper script approach
  - Follows ChatGPT's exact pattern matching for labels
  - Uses head -n1 + sed for title extraction
  - Implements area:ingestion,priority:high label strategy
  - Rate limiting and error handling included

• Enhanced gh-issues.sh wrapper with new Copilot commands:
  - ./gh-issues.sh copilot (RECOMMENDED for Copilot)
  - ./gh-issues.sh bulk (ChatGPT's simple approach)
  - Updated preview to use Copilot-optimized script

• Enhanced Makefile.issues with Copilot targets:
  - make create-copilot-issues (production Copilot creation)
  - make create-bulk-issues (ChatGPT bulk approach)
  - make create-copilot-issues-dry-run (safe preview)

• Added COPILOT-QUICKSTART.md - Comprehensive quick start guide
  - Fastest path to Copilot implementation
  - ChatGPT's exact commands for manual creation
  - Pro tips for Copilot success
  - Troubleshooting common issues
  - All available command options

READY FOR AUTONOMOUS IMPLEMENTATION:
All 5 comprehensive GitHub issues can now be created and assigned to
GitHub Copilot using ChatGPT's recommended approach. Copilot will
automatically start implementation via GitHub Actions VMs and open
PRs from copilot/* branches for review.

--- a/Makefile.issues
+++ b/Makefile.issues
@@ -38,9 +38,12 @@ help:
 	@echo -e "$(CYAN)Available Commands:$(NC)"
 	@echo ""
 	@echo -e "$(GREEN)Issue Creation:$(NC)"
-	@echo "  make create-issues          Create all GitHub issues and assign to Copilot"
-	@echo "  make create-issues-dry-run  Preview what issues would be created (safe)"
-	@echo "  make create-issues-force    Force recreate existing issues"
+	@echo "  make create-copilot-issues      Create issues optimized for Copilot (RECOMMENDED)"
+	@echo "  make create-copilot-issues-dry-run  Preview Copilot-optimized issues (safe)"
+	@echo "  make create-bulk-issues         Bulk create using ChatGPT's simple approach"
+	@echo "  make create-issues              Create all GitHub issues (full management)"
+	@echo "  make create-issues-dry-run      Preview standard issues creation (safe)"
+	@echo "  make create-issues-force        Force recreate existing issues"
 	@echo ""
 	@echo -e "$(GREEN)Issue Management:$(NC)"
 	@echo "  make list-issues            List all project issues"
@@ -107,6 +110,18 @@ create-issues: check-prerequisites validate-issues
 		--label "type:enhancement" \
 		--label "status:ready" \
 		--label "project:git-visualizer"
+
+create-copilot-issues: check-prerequisites validate-issues
+	@echo -e "$(BLUE)Creating GitHub issues optimized for Copilot (ChatGPT approach)...$(NC)"
+	@$(SCRIPTS_DIR)/create-copilot-issues.sh
+
+create-copilot-issues-dry-run: check-prerequisites validate-issues
+	@echo -e "$(CYAN)Preview: Copilot-optimized issues (dry run)...$(NC)"
+	@$(SCRIPTS_DIR)/create-copilot-issues.sh --dry-run
+
+create-bulk-issues: check-prerequisites validate-issues
+	@echo -e "$(BLUE)Bulk creating issues using ChatGPT's simple approach...$(NC)"
+	@$(SCRIPTS_DIR)/bulk-create-issues.sh
 
 create-issues-force: check-prerequisites validate-issues
 	@echo -e "$(YELLOW)Force creating GitHub issues (will recreate existing)...$(NC)"
