fix: resolve CI/CD issues and prepare GitHub URL integration for testing
- Fix TypeScript compilation errors in test files
- Update repository picker tests for new button behavior
- Add RepositoryProvider context to RepositoryHeader tests
- Add canvas package to support HTMLCanvasElement in tests
- Update CI/CD workflows with environment variables for GitHub overlay
- Enable GitHub API access in CSP and environment configuration
- All GitHub URL integration tests passing (32/32)
- Build and type checking now successful

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,10 @@
 name: CI
 on: [push, pull_request]
 
+env:
+  NEXT_PUBLIC_ENABLE_OVERLAYS: true
+  NEXT_PUBLIC_ENABLE_GITHUB_OVERLAY: true
+
 jobs:
   test:
     runs-on: ubuntu-latest
