--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@types/react-dom": "^19",
     "@vitejs/plugin-react": "^5.0.4",
     "axe-core": "^4.11.0",
+    "canvas": "^3.2.0",
     "cross-env": "^10.1.0",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
