Update workflows, Playwright config, and source files

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,3 +51,5 @@ jobs:
       
       - name: E2E tests
         run: pnpm exec playwright test --project=chromium --reporter=line
+        env:
+          CI: true
