--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -149,7 +149,7 @@ jobs:
         run: pnpm start &
       
       - name: Wait for server
-        run: npx wait-on http://localhost:3000
+        run: npx wait-on http://localhost:3000 --timeout 60000
 
       # Temporarily disable Lighthouse CI
       # - name: Run Lighthouse CI
